--- a/ProyectoIntegrador/views/register.ejs
+++ b/ProyectoIntegrador/views/register.ejs
@@ -15,14 +15,15 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12">
-				<form action="/register" method="POST">
+				<form action="/users/register" method="post" novalidate>
 					<div>
 						<label for="email">Email:</label>
 						<input id="email" type="email" name="email" value="">
+						 
 					</div>
 					<div>
 						<label for="user">Usuario:</label>
-						<input id="user" type="text" name="user" value="">
+						<input id="user" type="text" name="user" value="<%= locals.oldData && oldData.user ? oldData.user : null  %>">
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
