--- a/ProyectoIntegrador/views/register.ejs
+++ b/ProyectoIntegrador/views/register.ejs
@@ -18,16 +18,24 @@
 				<form action="/users/register" method="post" novalidate>
 					<div>
 						<label for="email">Email:</label>
-						<input id="email" type="email" name="email" value="">
-						 
+						<input id="email" type="email" name="email" value="<%= locals.oldData && oldData.email ? oldData.email : null  %>">
+						<% if (locals.errors && errors.email) { %>
+                            <div class="error-msg"><%= errors.email.msg %></div>
+                        <% } %>
 					</div>
 					<div>
 						<label for="user">Usuario:</label>
 						<input id="user" type="text" name="user" value="<%= locals.oldData && oldData.user ? oldData.user : null  %>">
+						<% if (locals.errors && errors.user) { %>
+                            <div class="error-msg"><%= errors.user.msg %></div>
+                        <% } %>
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
 						<input id="password" type="password" name="password" value="">
+						<% if (locals.errors && errors.password) { %>
+                            <div class="error-msg"><%= errors.password.msg %></div>
+                        <% } %>
 					</div>
 					<div>
 						<label for="fecha">Fecha de nacimiento:</label>
