--- a/ProyectoIntegrador/views/search-results.ejs
+++ b/ProyectoIntegrador/views/search-results.ejs
@@ -10,14 +10,34 @@
 			<%- include('./partials/headerDeslogueado') %>
 			<% } %>
 	<!-- /Header -->
-
+	
 	<!-- Novedades -->
+	<% console.log(autos) %>
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
 				<h2 class="products-title">Resultados de búsqueda</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
+			<% for(let i=0; i<autos.length; i++){ %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/product">
+							<figure class="product-box_image">
+								<img src="images/products/auto1.jpg" alt="cafetera moulinex">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= autos[i].nombre_producto %></h2>
+								<p><%= autos[i].descripcion %> </p>
+								<p>Comentarios: 12</p>
+							</article>
+						</a>
+					</section>
+				</div>
+			<% } %>
+
+
+
 			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
 			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
 			////////////////
