--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -4,11 +4,7 @@
 <%- include('./partials/head') %>
 <body>
 	<!-- Header -->
-	<% if(locals.usuario){ %>
-		<%- include('./partials/headerLogueado') %>
-		<% } else{ %>
-			<%- include('./partials/headerDeslogueado') %>
-			<% } %>
+<%- include('./partials/headerLogueado') %>
 	<!-- /Header -->
 
 	<!-- Datos del usuario -->
@@ -19,20 +15,30 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> <%=locals.usuario.nombre %> 
+					<h1 class="main-title"> <%= locals.usuario.nombre %>
 						<a href="/users/profileEdit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
 					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
 				</div>
-				<div>
-					<ul class="">
-						<li>8 productos</li>
-						<li>200 seguidores</li>
-						<li>300 comentarios</li>
-					</ul>
-				</div>
+					<div>
+						<ul class="">
+							<li>
+								<% let ctdProductos = 0  %>
+								<% for( let i = 0; i < usuario.Productos.length; i++ ) { %>
+									<% if (usuario.Productos[i].id_usuario == locals.usuario.id) { %>
+										<% ctdProductos++ %>
+										<% } %>
+								<% } %>
+								<%= ctdProductos %> Productos
+						
+						</li>
+							<li>200 seguidores</li>
+							<li>300 comentarios</li>
+						</ul>
+					</div>		
+				
 			</div>
 		</div>
 	</section>
@@ -45,21 +51,29 @@
 				<h2 class="product-title">Mis productos</h2>
 			</div>
 			<!-- Show mis productos -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto1.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Ferrari</h2>
-							<p>Ferrari 428 Italia, destacado por su aceleracion.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
+
+
+			<% for( let i = 0; i < usuario.Productos.length; i++ ) { %>
+			
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/product">
+							<figure class="product-box_image">
+								<img src="/images/products/<%= usuario.Productos[i].nombre_foto %>" alt="cafetera moulinex">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= usuario.Productos[i].nombre_producto %></h2>
+								<p><%= usuario.Productos[i].descripcion %></p>
+							</article>
+						</a>
+					</section>
+				</div>
+
+
+			<% } %>
+			
+			
+			<!-- <div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
@@ -158,7 +172,7 @@
 				</section>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- /Mis productos -->
 
 
