--- a/ProyectoIntegrador/views/search-results.ejs
+++ b/ProyectoIntegrador/views/search-results.ejs
@@ -22,9 +22,9 @@
 			<% for(let i=0; i<autos.length; i++){ %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/product">
+						<a href="/product/<%= autos[i].id %>">
 							<figure class="product-box_image">
-								<img src="images/products/auto1.jpg" alt="cafetera moulinex">
+								<img src="images/products/<%= autos[i].nombre_foto %>" alt="cafetera moulinex">
 							</figure>
 							<article class="product-box_data">
 								<h2><%= autos[i].nombre_producto %></h2>
@@ -38,9 +38,8 @@
 
 
 
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá van los resultados de búsqueda. <br>
-			Eliminen estás líneas y cosntruyan la página de resultados de búsqueda. <br>
-			////////////////
+			<h2 class="col-12">
+				No hay resultados de busqueda.....
 			</h2>
 
 
