--- a/ProyectoIntegrador/views/product-add.ejs
+++ b/ProyectoIntegrador/views/product-add.ejs
@@ -20,7 +20,7 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
-				<form action="/profile" method="POST">
+				<form action="/product/productAdd" method="POST">
 					<div>
 						<label for="image">Imagen:</label>
 						<input id="image" type="file" name="image" value="<%= locals.oldData && oldData.image ? oldData.image : null  %>">
