--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -35,6 +35,7 @@
 							<article class="product-box_data">
 								<h2><%= autos[i].nombre_producto %></h2>
 								<p><%= autos[i].descripcion %> </p>
+								<p>Subido por: <%= autos[i].Usuarios.nombre %></p>
 							</article>
 						</a>
                         
@@ -61,7 +62,7 @@
 							<article class="product-box_data">
 								<h2><%= autos[i].nombre_producto %></h2>
 								<p><%= autos[i].descripcion %> </p>
-								<p>Comentarios: 12</p>
+								<p>Subido por: <%= autos[i].Usuarios.nombre %></p>
 							</article>
 						</a>
 					</section>
