--- a/ProyectoIntegrador/views/search-results.ejs
+++ b/ProyectoIntegrador/views/search-results.ejs
@@ -29,7 +29,7 @@
 							<article class="product-box_data">
 								<h2><%= autos[i].nombre_producto %></h2>
 								<p><%= autos[i].descripcion %> </p>
-								<p>Comentarios: 12</p>
+								<p>Subido por: <%= autos[i].Usuarios.nombre %></p>
 							</article>
 						</a>
 					</section>
