--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -64,6 +64,7 @@
 							<article class="product-box_data">
 								<h2><%= usuario.Productos[i].nombre_producto %></h2>
 								<p><%= usuario.Productos[i].descripcion %></p>
+								<p>Subido por: <%= usuario.nombre %></p>
 							</article>
 						</a>
 					</section>
