--- a/ProyectoIntegrador/views/profile-edit.ejs
+++ b/ProyectoIntegrador/views/profile-edit.ejs
@@ -23,16 +23,24 @@
 					<div>
 						<label for="email">Email:</label>
 						<input id="email" type="email" name="email" value="<%=locals.usuario.email %>">
-					
+						<% if (locals.errors && errors.email) { %>
+                            <div class="error-msg"><%= errors.email.msg %></div>
+                        <% } %>
 					</div>
 					
 					<div>
 						<label for="user">Usuario:</label>
 						<input id="nombre" type="text" name="nombre" value="<%=locals.usuario.nombre %>">
+						<% if (locals.errors && errors.nombre) { %>
+                            <div class="error-msg"><%= errors.nombre.msg %></div>
+                        <% } %>
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
 						<input id="contrasenia" type="password" name="contrasenia" value="">
+						<% if (locals.errors && errors.contrasenia) { %>
+                            <div class="error-msg"><%= errors.contrasenia.msg %></div>
+                        <% } %>
 					</div>
 					<div>
 						<label for="fecha">Fecha de nacimiento:</label>
