--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -16,7 +16,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title"><%= product.nombre_producto %></h2> 
 			<p class="product-detail-description">
-				<a href="/product/productAdd">Editar</a>
+				<a href="/product/productEdit/<%= product.id %>">Editar</a>
 			</p>
 		</div>
 		<div class="product-detail">
